codepkg/objects/Departament__c.object
<CustomObject>
    <fields>
        <fullName>Average_departament_salary__c</fullName>
        <formula>sum_salary__c /  count_employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>We change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DirectorEmail__c</fullName>
        <label>DirectorEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Offices__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Departments</relationshipLabel>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>count_employee_workflow__c</fullName>
        <label>count employee workflow</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>count_employees__c</fullName>
        <label>count employee</label>
        <summaryForeignKey>Employee__c.Departamentss__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>max_salary__c</fullName>
        <label>max salary</label>
        <summarizedField>Employee__c.salaryS__c</summarizedField>
        <summaryForeignKey>Employee__c.Departamentss__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>min_salary__c</fullName>
        <label>min salary</label>
        <summarizedField>Employee__c.salaryS__c</summarizedField>
        <summaryForeignKey>Employee__c.Departamentss__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sum_salary__c</fullName>
        <label>sum salary</label>
        <summarizedField>Employee__c.salaryS__c</summarizedField>
        <summaryForeignKey>Employee__c.Departamentss__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Departament Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>